--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         <button class="close-menu-activation close"><i data-feather="x"></i></button>
                     </div>
                 </div>
-                <p class="discription">Inbio is a personal portfolio template. You can customize all.</p>
+                <p class="discription">Design de excelência com foco no usuário.</p>
             </div>
             <div class="content">
                 <ul class="primary-menu nav nav-pills onepagenav">
@@ -521,7 +521,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="section-title text-center">
-                            <span class="subtitle">Minhas Experiencias e Habilidades</span>
+                            <span class="subtitle">Minhas Experiências e Habilidades</span>
                             <h2 class="title">Meu Currículo</h2>
                         </div>
                     </div>
