--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
 <li class="wow fadeInLeft" data-wow-duration="1s">
 <div class="list_inner tilt-effect">
 <span class="icon">
-<img class="svg" src="img/svg/service/monitor.svg" alt="" />
+<img class="svg" src="./img/svg/service/monitor.svg" alt="" />
 <img class="back" src="img/brushes/service/1.png" alt="" />
 </span>
 <div class="title">
