--- a/index.html
+++ b/index.html
@@ -414,9 +414,9 @@
 <li class="popup grid-item">
 <div class="inner">
 <div class="entry dizme_tm_portfolio_animation_wrap" data-title="Dashboard de Recursos Humanos" data-category="Dashboard">
-<a class="portfolio_popup" href="img/portfolio/dash_rh1.png">
+<a class="portfolio_popup" href="img/portfolio/dash_rh.PNG">
 <img src="img/thumbs/42-34.jpg" alt="" />
-<div class="main" data-img-url="img/portfolio/dash_rh1.png"></div>
+<div class="main" data-img-url="img/portfolio/dash_rh.PNG"></div>
 </a>
 </div>
 <div class="mobile_title">
