--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="navbar-menu">
 
-                        <img src="assets/img/logo-light.png" alt="Logo">
+                        <img src="assets/img/logo-branca.png" alt="Logo">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
                             <i class="fa fa-times"></i>
                         </button>
@@ -159,7 +159,7 @@
 
                                         <li>
                                             <div class="content">
-                                                <a class="btn circle btn-sm btn-gradient animation" href="https://drive.google.com/file/d/1bHLl9h6GB1Cv8GQzChTcF7eDI2GJzGkP/view?usp=sharing">Acesse meu CV</a>
+                                                <a class="btn circle btn-sm btn-gradient animation" href="https://drive.google.com/file/d/1NjxfSuzqJa_W063eBiy5RMC4twCvpMrH/view?usp=sharing">Acesse meu CV</a>
                                             </div>
                                         </li>
 
@@ -224,7 +224,7 @@
                     <div class="col-lg-6 offset-lg-6">
                         <div class="experience-box">
                             <div class="inner-content">
-                                <h2><strong>01+</strong> Anos de experiência</h2>
+                                <h2><strong>03+</strong> Anos de experiência</h2>
                                 <p>
                                     Me chamo Gabriela Paresqui, sou Product Designer e hoje como profissional, meu foco é criar experiências extraordinárias com design inovador e de excelência.
                                 </p>
@@ -562,7 +562,7 @@
                             <!-- Single item -->
                             <div class="fun-fact animate" data-animate="fadeInUp" data-duration="0.5s">
                                 <div class="counter">
-                                    <div class="timer" data-to="98" data-speed="3000">99</div>
+                                    <div class="timer" data-to="98" data-speed="3000">98</div>
                                     <div class="operator">%</div>
                                 </div>
                                 <span class="medium">Satisfação dos Clientes</span>
@@ -571,7 +571,7 @@
                             <!-- Single item -->
                             <div class="fun-fact animate" data-animate="fadeInDown">
                                 <div class="counter">
-                                    <div class="timer" data-to="874" data-speed="3000">10</div>
+                                    <div class="timer" data-to="874" data-speed="3000">15</div>
                                     <div class="operator">+</div>
                                 </div>
                                 <span class="medium">Projetos Concluídos</span>
@@ -580,7 +580,7 @@
                             <!-- Single item -->
                             <div class="fun-fact animate" data-animate="fadeInUp" data-duration="0.5s">
                                 <div class="counter">
-                                    <div class="timer" data-to="35" data-speed="1000">01+</div>
+                                    <div class="timer" data-to="35" data-speed="1000">03+</div>
                                 </div>
                                 <span class="medium">Anos de Experiência</span>
                             </div>
