--- a/projeto-izzat.html
+++ b/projeto-izzat.html
@@ -198,7 +198,7 @@
                                                 </li>
                                                 <li>
                                                     <div class="info">
-                                                        Tasks: <span>UX Design, UI Design</span>
+                                                        Competências: <span>UX Design, UI Design</span>
                                                     </div>
                                                 </li>
                                             </ul>
